# klangk

./: .env.example  .gitattributes  .gitignore  AGENTS.md  ARCHITECTURE.md  AUTHZ.md  CHANGES.md  CLI.md  COLLAB.md  CONTRIBUTING.md  Dockerfile  GITCREDS.md  HACKING.md  HANDOFF.md  LICENSE.md  PLAN.md  README.md  SECURITY.md  TODO.md  bootstrap  consent-banner.md  container.nix  devenv.nix  devenv.yaml  docker-compose.yml  features.yaml  klangkd.conf.example  klangkd.yaml.example  plugins.yaml  pyproject.toml  synctoarctor.sh  zensical.toml
src/backend/: DOCKER.md  pyproject.toml
src/backend/bark_backend/: api.py  auth.py  container.py  container_manager.py  email_service.py  file_service.py  main.py  model.py  pi_rpc_client.py  terminal.py  terminal_manager.py  user_store.py  workspace_manager.py  workspaces.py  ws_handler.py  wshandler.py
src/backend/bark_backend/cli/: client.py  main.py
src/backend/e2e-tests/: _e2e_env.py  conftest.py  runtestserver.py  test_agent_home_e2e.py  test_api_e2e.py  test_cli_e2e.py  test_default_command_fanout_e2e.py  test_default_command_shared_e2e.py  test_event_fanout.py  test_health_check_e2e.py  test_nginx_acl_e2e.py  test_nginx_lifecycle_e2e.py  test_per_user_home.py  test_service_command_shared_e2e.py  test_sighup_restart_e2e.py
src/backend/klangk_backend/: _instance_id.py  _klangkd.py  _resolve_secret.py  _resolve_value.py  acl.py  agent.py  api.py  auth.py  bringup.py  connections.py  container.py  dockerexec.py  emailsvc.py  exceptions.py  files.py  klangkd.py  main.py  model.py  nginx.py  oidc.py  plugin_config.py  plugins.py  podman.py  settings.py  ssl_trust.py  terminal.py  util.py  workspaces.py  wshandler.py
src/backend/klangk_backend/api/: __init__.py  _common.py  admin.py  auth.py  browser_delegate.py  chat.py  files.py  images.py  oidc_auth.py  workspaces.py
src/backend/klangk_backend/cli/: auth.py  client.py  main.py
src/backend/klangk_backend/email_templates/: base.html
src/backend/klangk_backend/model/: __init__.py  _core.py  acl.py  chat.py  db.py  instance.py  invitations.py  login_attempts.py  model.py  ports.py  schema.py  tokens.py  users.py  workspaces.py
src/backend/klangk_backend/wshandler/: __init__.py  _constants.py  agent_mention.py  connection.py  constants.py  controllers.py  dispatch.py  helpers.py  safe_websocket.py  session.py
src/backend/tests/: _helpers.py  conftest.py  test_acl.py  test_acl_app_state.py  test_agent.py  test_agui_translator.py  test_api.py  test_api_package.py  test_auth.py  test_bringup.py  test_cli.py  test_cli_integration.py  test_cli_main.py  test_container.py  test_container_manager.py  test_dockerexec.py  test_email_service.py  test_emailsvc.py  test_file_service.py  test_files.py  test_git_credential.py  test_instance_id.py  test_main.py  test_mode_switching.py  test_model.py  test_model_app_state.py  test_model_chat.py  test_model_users.py  test_model_workspaces.py  test_nginx.py  test_oidc.py  test_pi_rpc_client.py  test_plugin_config.py  test_plugins.py  test_podman.py  test_podman_exec.py  test_resolve_secret.py  test_resolve_value.py  test_settings.py  test_setup_clankers.py  (+9 more)
src/cli/: CHANGES.md  README.md  pyproject.toml
src/cli/e2e-tests/: conftest.py  test_cli_e2e.py  test_monitor_e2e.py  test_terminal_windows_e2e.py
src/cli/klangkc/: auth.py  client.py  config.py  main.py  sandbox.py  transport.py
src/cli/tests/: conftest.py  test_cli.py  test_cli_integration.py  test_cli_main.py  test_mount.py  test_sandbox.py
src/klangk/: hatch_build_frontend.py  pyproject.toml
src/klangk/cli-e2e-tests/: test_terminal_windows_e2e.py
src/klangk/e2e-tests/: _e2e_env.py  conftest.py  test_agent_home_e2e.py  test_api_e2e.py  test_health_check_e2e.py  test_per_user_home.py  test_service_command_shared_e2e.py  test_sighup_restart_e2e.py
src/klangk/klangk/: agent.py  auth.py  caddy.py  container.py  emailsvc.py  features.py  files.py  first_run.py  launcher.py  logger.py  main.py  netfilter.py  nginx.py  oidc.py  plugins.py  podman.py  proxy.py  settings.py  ssl_trust.py  terminal.py  util.py  workspaces.py
src/klangk/klangk/api/: __init__.py  _common.py  admin.py  auth.py  chat.py  oidc_auth.py  workspaces.py
src/klangk/klangk/cli/: README.md  auth.py  client.py  config.py  env.py  main.py  mount.py  sandbox.py  transport.py
src/klangk/klangk/model/: __init__.py  chat.py  ports.py  schema.py  tokens.py  users.py  workspaces.py
src/klangk/klangk/wshandler/: __init__.py  agent_mention.py  connection.py  constants.py  controllers.py  dispatch.py  helpers.py  session.py
src/klangk/klangkc/: client.py  main.py
src/klangk/klangkc-tests/e2e-tests/: conftest.py  test_cli_e2e.py  test_monitor_e2e.py  test_terminal_windows_e2e.py
src/klangk/klangkc-tests/tests/: conftest.py  test_cli.py  test_cli_integration.py  test_cli_main.py  test_mount.py  test_sandbox.py  test_transport.py  test_tui.py
src/klangk/klangkd/: container.py  emailsvc.py  files.py  oidc.py  settings.py  ssl_trust.py  terminal.py
src/klangk/klangkd-tests/e2e-tests/: _e2e_env.py  _e2e_server.py  conftest.py  runtestserver.py  test_agent_home_e2e.py  test_api_e2e.py  test_caddy_acl_e2e.py  test_caddy_lifecycle_e2e.py  test_event_fanout.py  test_health_check_e2e.py  test_nginx_acl_e2e.py  test_nginx_lifecycle_e2e.py  test_per_user_home.py  test_proxy_acl_e2e.py  test_proxy_lifecycle_e2e.py  test_service_command_shared_e2e.py  test_sighup_restart_e2e.py  test_systemd_nginx_e2e.py
src/klangk/klangkd-tests/tests/: _helpers.py  conftest.py  test_acl.py  test_acl_app_state.py  test_agent.py  test_api.py  test_api_package.py  test_auth.py  test_bringup.py  test_caddy.py  test_container.py  (+29 more)
src/klangk/tests/: _helpers.py  conftest.py  test_acl_app_state.py  test_api.py  test_api_package.py  test_bringup.py  test_emailsvc.py  test_files.py  test_git_credential.py  test_main.py  test_model_app_state.py  test_model_users.py  test_model_workspaces.py  test_nginx.py  test_oidc.py  test_plugins.py  test_podman.py  test_sandbox.py  test_setup_pi.py  test_terminal.py  test_transport.py  test_util.py
(+727 files in other folders)
