[project]
name = "klangk-backend"
dynamic = ["version"]
description = "Klangk backend: multi-user Pi coding agent web REPL"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "pydantic-settings>=2.5.0",
    "uvicorn[standard]>=0.32.0",
    "websockets>=14.0",
    "aiosqlite>=0.20.0",
    "sqlalchemy[asyncio]>=2.0",
    "bcrypt>=4.0.0",
    "python-jose[cryptography]>=3.3.0",
    "cryptography>=48.0.1",
    "python-multipart>=0.0.30",
    "starlette>=1.3.1",
    "aiosmtplib>=3.0.0",
    "jinja2>=3.1",
    "logfire[fastapi]>=3.0.0",
    "pyyaml>=6.0",
    "httpx>=0.28.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-xdist>=3.0.0",
]

[project.scripts]
klangk-instance-id = "klangk_backend._instance_id:main"
klangk-resolve-value = "klangk_backend._resolve_value:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = "--capture=no --cov=klangk_backend --cov-report=term-missing --no-cov-on-fail --cov-fail-under=100"

[tool.ruff]
line-length = 79

[tool.hatch.version]
source = "vcs"
fallback-version = "0.0.0.dev0"
raw-options.root = "../.."
raw-options.tag_regex = "^v(?P<version>[vV]?\\d+(?:\\.\\d+){0,2}[^\\+]*)(?:\\+.*)?$"
raw-options.git_describe_command = ["git", "describe", "--dirty", "--tags", "--long", "--match", "v*"]

[tool.hatch.build.targets.wheel]
packages = ["klangk_backend"]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"
